2013-12-17  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* fhandler.h (fhandler_pty_master::~fhandler_pty_master): Delete.
	* fhandler_tty.cc (fhandler_pty_master::~fhandler_pty_master): Ditto.

2013-12-11  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (NT_TRANSACTIONAL_ERROR): Define.
	(stop_transaction): Take "trans" HANDLE by reference and set it to
	NULL after closing it.
	(unlink_nt): If NtOpenFile fails due to a transactional error, stop
	transaction and retry NtOpenFile.  Simplify check for having to call
	stop_transaction.
	(rename): If NtOpenFile fails due to a transactional error, stop
	transaction and retry NtOpenFile in both affected cases.  Simplify check
	for having to call stop_transaction and add comment from unlink_nt.

2013-12-11  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (fs_info::update): Fix formatting.

2013-12-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_dev_clipboard): Add private member
	cygnativeformat.  Declare private method set_clipboard.
	* fhandler_clipboard.cc (cygnativeformat): Convert static variable to
	fhandler_dev_clipboard member.
	(fhandler_dev_clipboard::set_clipboard): Convert from static function
	to fhandler_dev_clipboard method.

2013-12-09  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* globals.cc (hntdll): Define/declare.
	* exceptions.cc (inside_kernel): Don't call GetModuleFileName if we
	know we're in ntdll.
	* sigproc.cc (wait_sig): Initialize hntdll.

2013-12-09  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/stdlib.h (initstate, random, setstate, srandom):
	Harden _XOPEN_SOURCE guard against applications defining _XOPEN_SOURCE
	with empty value.

2013-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 28.

2013-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_native): Workaround Windows 8.1 bug: Drop long path
	prefix from symlink target path.  Add comment to explain why.
